--- a/index.html
+++ b/index.html
@@ -973,11 +973,11 @@
 </div>
 
 <h3 id="student-information">Student Information:</h3>
-<p>  <strong>Full Name:</strong> Nguyen Van A</p>
-<p>  <strong>Phone Number:</strong> 0989888999</p>
-<p>  <strong>Email:</strong> <a href="mailto:Anguyenvan@gmail.com">Anguyenvan@gmail.com</a></p>
-<p>  <strong>University:</strong> Ho Chi Minh City University of Technology and Education</p>
-<p>  <strong>Major:</strong> Information Technology</p>
+<p>  <strong>Full Name:</strong> Võ Trường Thành Phát</p>
+<p>  <strong>Phone Number:</strong> 0707712750</p>
+<p>  <strong>Email:</strong> <a href="mailto:Anguyenvan@gmail.com">phatvttse171823@fpt.edu.vn</a></p>
+<p>  <strong>University:</strong> FPT University</p>
+<p>  <strong>Major:</strong> Software Engineering</p>
 <p>  <strong>Class:</strong> AWS082025</p>
 <p>  <strong>Internship Company:</strong> Amazon Web Services Vietnam Co., Ltd.</p>
 <p>  <strong>Internship Position:</strong> FCJ Cloud Intern</p>
